--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -80,13 +80,24 @@ jobs:
       - name: Terraform test
         id: test
         run: terraform test
+
+      - name: Install Conftest
+        run: |
+          curl -L https://github.com/open-policy-agent/conftest/releases/download/v0.45.0/conftest_0.45.0_Linux_x86_64.tar.gz | tar xz
+          sudo mv conftest /usr/local/bin
         
 
       - name: Terraform Plan
         id: plan
         if: github.ref == 'refs/heads/main' && (github.event_name == 'pull_request' || github.event_name == 'push')
        # if: github.event_name == 'pull_request'
-        run: terraform plan -no-color -input=false
+        run: | 
+         terraform plan -no-color -input=false
+         terraform plan -out=tfplan.binary
+         terraform show -json tfplan.binary > plan.json
+      
+      - name: Run OPA Tag Policy Check
+        run: conftest test --input terraform plan.json
 
 #      - name: Install terraform-docs
 #        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
