--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -81,11 +81,31 @@ jobs:
         id: test
         run: terraform test
 
+      - name: Generate Terraform JSON Plan
+        run: |
+          terraform plan -out=tfplan.binary
+          terraform show -json tfplan.binary > tfplan.json
+
+      - name: Install terraform-compliance
+        run: |
+          pip install terraform-compliance
+
+      - name: Run terraform-compliance Tests
+        run: |
+          terraform-compliance -p tfplan.json -f tests/terraform_compliance
+        continue-on-error: true
+
       - name: Install Conftest
         run: |
-          curl -L https://github.com/open-policy-agent/conftest/releases/download/v0.45.0/conftest_0.45.0_Linux_x86_64.tar.gz | tar xz
-          sudo mv conftest /usr/local/bin
-        
+          wget https://github.com/open-policy-agent/conftest/releases/download/v0.52.0/conftest_0.52.0_Linux_x86_64.tar.gz
+          tar xzf conftest_0.52.0_Linux_x86_64.tar.gz
+          chmod +x conftest
+          sudo mv conftest /usr/local/bin/
+
+      - name: Run OPA (Conftest) Policy Checks
+        run: |
+          conftest test tfplan.json --policy policy/
+        continue-on-error: true 
 
       - name: Terraform Plan
         id: plan
@@ -93,11 +113,7 @@ jobs:
        # if: github.event_name == 'pull_request'
         run: | 
          terraform plan -no-color -input=false
-         terraform plan -out=tfplan.binary
-         terraform show -json tfplan.binary > plan.json
       
-      - name: Run OPA Tag Policy Check
-        run: conftest test --input terraform plan.json
 
 #      - name: Install terraform-docs
 #        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
