--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,22 +86,19 @@ jobs:
         uses: aquasecurity/tfsec-action@v1.0.0
         continue-on-error: true
 
-      - name: Generate Terraform JSON Plan
+      - name: Install Conftest
         run: |
+          curl -L https://github.com/open-policy-agent/conftest/releases/download/v0.45.0/conftest_0.45.0_Linux_x86_64.tar.gz | tar xz
+          sudo mv conftest /usr/local/bin
+
+      - name: Terraform Init & Plan
+        run: |
+          terraform init
           terraform plan -out=tfplan.binary
           terraform show -json tfplan.binary > tfplan.json
 
-      - name: Install Conftest
-        run: |
-          wget https://github.com/open-policy-agent/conftest/releases/download/v0.52.0/conftest_0.52.0_Linux_x86_64.tar.gz
-          tar xzf conftest_0.52.0_Linux_x86_64.tar.gz
-          chmod +x conftest
-          sudo mv conftest /usr/local/bin/
-
-      - name: Run OPA (Conftest) Policy Checks
-        run: |
-          conftest test tfplan.json --policy policy/
-        continue-on-error: true 
+      - name: Run OPA Policy Check
+        run: conftest test tfplan.json --policy policy/
 
 #      - name: Terraform Plan
 #        id: plan
